--- a/style.css
+++ b/style.css
@@ -13,17 +13,18 @@
 }
 :root
 {
-    --background: #282C33;
+    --white: #fff;
     --blue: #C778DD;
     --gray: #ABB2BF;
-    --white: #fff;
+    --background: #282C33;
+    --nav-background: #282c33ca;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--cream);
+  background: var(--blue);
   border-radius: 10px;
 }
 body
@@ -122,27 +123,29 @@ span
     display: inline;
     color: var(--blue);
 }
+
 .sidebar
 {
+    left: 10px;
     width: 100px;
     height: 42vh;
-    position: fixed;
-    z-index: 10000;
     display: flex;
+    z-index: 10000;
+    position: fixed;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    transform: translateX(-150px);
+    animation: top 1s ease forwards;
 }
 .sidebar .icons
 {
+    gap: 5px;
     width: 100%;
-    height: fit-content;
     padding: 5px;
     display: flex;
-    gap: 5px;
-    flex-direction: column;
+    height: fit-content;
     align-items: center;
+    flex-direction: column;
 }
 .sidebar img
 {
@@ -150,8 +153,8 @@ span
 }
 .sidebar hr
 {
-    transform: rotate(90deg);
     width: 50vh;
+    transform: rotate(90deg);
     border-color: var(--gray);
 }
 
@@ -163,15 +166,26 @@ header
 }
 nav
 {
-    z-index: 1000;
     top: 0;
     width: 100%;
     height: 60px;
+    z-index: 1000;
     display: flex;
     position: sticky;
-    background: var(--background);
-    justify-content: space-between;
     padding: 0 150px;
+    backdrop-filter: blur( 8px );
+    justify-content: space-between;
+    animation: top 1s ease forwards;
+    background: var(--nav-background);
+    -webkit-backdrop-filter: blur( 6.5px );
+}
+@keyframes top {
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(0%);
+    }
 }
 nav .left
 {
@@ -224,6 +238,10 @@ nav .right .button a:hover
     background: rgba(199, 120, 221, 0.20);
     transition: .5s;
 }
+a.active
+{
+    color: var(--white);
+}
 header .top
 {
     width: 100%;
@@ -235,6 +253,20 @@ header .top .left
 {
     width: 40%;
     margin-top: 150px;
+    animation: top-right 1s ease forwards;
+}
+@keyframes top-right
+{
+    0%
+    {
+        opacity: 0;
+        transform: translate(-30%, 30%);
+    }
+    100%
+    {
+        opacity: 1;
+        transform: translate(0%);
+    }
 }
 header .top .left h1
 {
@@ -269,6 +301,17 @@ header .top .right
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    animation: top-left 1s ease forwards;
+}
+@keyframes top-left {
+    0%{
+        opacity: 0;
+        transform: translate(20%, 20%);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0%);
+    }
 }
 header .top .right .workPlace
 {
@@ -297,6 +340,17 @@ header .bottom
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: bottom 1s ease forwards;
+}
+@keyframes bottom {
+    0%{
+        opacity: 0;
+        transform: translateY(100%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0%);
+    }
 }
 header .bottom h2
 {
@@ -311,8 +365,8 @@ header .bottom .qoute::before
     width: 30px;
     height: 24px;
     position: absolute;
-    left: 330px;
-    bottom: 190px;
+    left: 200px;
+    bottom: 140px;
     background-size: cover;
     background: url(./imgs/quote.png);
     background-repeat: no-repeat;
@@ -325,8 +379,8 @@ header .bottom .qoute::after
     width: 30px;
     height: 24px;
     position: absolute;
-    right: 330px;
-    bottom: 115px;
+    right: 200px;
+    bottom: 65px;
     background-size: cover;
     background: url(./imgs/quote.png);
     background-repeat: no-repeat;
@@ -340,6 +394,8 @@ header .bottom .quotes
     flex-direction: column;
 }
 /* Header end */
+
+
 
 /* Section start */
 
@@ -466,13 +522,13 @@ header .bottom .quotes
 
 /* Projects end */
 
+
 /* Skills Start */
 .skills
 {
     width: 100%;
     height: fit-content;
     margin-top: 120px;
-    height: fit-content;
 }
 .skills .top
 {
@@ -489,7 +545,7 @@ header .bottom .quotes
     margin-left: 15px;
     border-color: var(--blue);
 }
-.skills .bottom
+.container .skills .bottom
 {
     display: flex;
     justify-content: end;
@@ -503,12 +559,12 @@ header .bottom .quotes
 }
 .skills .skillCards
 {
+    gap: 16px;
     width: 60%;
     height: 100%;
     display: flex;
-    justify-content: flex-end;
-    gap: 16px;
     margin-top: 40px;
+    justify-content: flex-end;
 }
 .skills .skillCards .left,
 .skills .skillCards .center,
