--- a/pagesStyles/projects.css
+++ b/pagesStyles/projects.css
@@ -36,7 +36,7 @@ span
     padding: 0 150px;
     margin-top: 60px;
 }
-.projectsPage .title
+.projectsPage .title.pp
 {
     width: 100%;
     height: fit-content;
@@ -69,7 +69,7 @@ span
 {
     margin-top: 70px;
 }
-.projectsPage .completeSites .top
+.projectsPage .completeSites .cs.top
 {
     width: 60%;
     height: 100%;
@@ -78,7 +78,7 @@ span
     justify-content: space-between;
     animation: topRight 1s ease forwards;
 }
-.projectsPage .completeSites .top h1
+.projectsPage .completeSites .cs.top h1
 {
     padding-right: 15px;
     color: var(--white);
