--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,4 +1,8 @@
 @media screen and (max-width: 767px) {
+    .cursor
+    {
+        display: none;
+    }
     .hambergurMenuActive.active
     {
         left: 0;
